--- a/CP(Cine Plus)/Principal/Principal.html
+++ b/CP(Cine Plus)/Principal/Principal.html
@@ -23,7 +23,7 @@
     <!-- Carrusel de películas -->
     <div class="carrusel">
         <!-- Aquí puedes agregar el código necesario para el carrusel de películas -->
-        <h2>Carrusel de Películas</h2>
+        <h2>Carrusel de PPPPPPPPPelículas</h2>
         <!-- Por ejemplo, podrías usar un plugin como Slick Carousel -->
         <div class="slick-carousel">
             <div><img src="pelicula1.jpg" alt="Película 1"></div>
