--- a/CP(Cine Plus)/src/Pages/Principal/Principal.html
+++ b/CP(Cine Plus)/src/Pages/Principal/Principal.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CP</title>
     <!-- Agrega tus estilos CSS aquí -->
-    <link rel="stylesheet" href="Principal.css">
+    <!-- <link rel="stylesheet" href="Principal.css"> -->
     <!-- Agrega tus scripts JavaScript aquí -->
     <script src="script.js" defer></script>
 </head>
